# plain-color

./: .gitignore  README.md  index.html  package.json  picker.html  tsconfig.json  vite.config.ts
docs/: ICONS.md  RELEASE.md  index.html
public/: manifest.json
src/: App.tsx  index.tsx  main.tsx  picker.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: display.rs  lib.rs  macospermissions.rs  main.rs  mod_clr.rs  mod_coloradjustments.rs  mod_commands.rs  mod_display.rs  mod_globalvars.rs  mod_image.rs  mod_macospermissions.rs  mod_pickerloop.rs  mod_screenshot.rs
src-tauri/updater/: generate-artifacts.js
src/assets/scss/: animations.scss  global.scss  variables.scss
src/components/AppIcon/: index.scss  index.tsx  props.ts
src/components/Button/: index.scss  index.tsx  props.ts
src/components/ColorCard/: index.scss  index.tsx  props.ts
src/components/ColorInput/: index.scss  index.tsx  props.ts
src/components/ColorPicker/: index.scss  index.tsx  props.ts
src/components/ContextMenu/: index.scss  index.tsx
src/components/Header/: index.scss  index.tsx  props.ts
src/components/Icon/: index.scss  index.tsx  props.ts
src/components/Image/: index.tsx  props.ts
src/components/Input/: index.tsx  props.ts
src/components/Logo/: index.scss  index.tsx  props.ts
src/components/PaletteCard/: index.scss  index.tsx  props.ts
src/components/PickerPreview/: index.scss  index.tsx  props.ts
src/components/ProgressBar/: index.scss  index.tsx  props.ts
src/components/Scroller/: index.scss  index.tsx  props.ts
src/components/Select/: index.scss  index.tsx  props.ts
src/components/Stack/: index.scss  index.tsx  props.ts
src/components/Tabs/: index.scss  index.tsx  props.ts
src/components/Text/: index.scss  index.tsx  props.ts
src/components/Textarea/: index.scss  index.tsx  props.ts
src/components/Updater/: index.tsx
src/components/VirtualScroller/: index.scss  index.tsx  props.ts
src/components/WindowContent/: index.scss  index.tsx
src/components/WindowTitlebar/: index.scss  index.tsx  props.ts
src/config/: index.ts
src/hooks/: useClickOutside.hook.ts  usePinchGesture.hook.ts  useRightClick.hook.ts
src/lib/: index.ts  plainlib.scss  types.ts
src/pages/AboutPage/: index.tsx
src/routes/: index.tsx
src/store/: colors.store.ts  colors.ts  contextMenu.store.ts  palettes.store.ts  picker.store.ts  picker.ts  settings.store.ts
src/types/: color.ts  export.types.ts  palette.types.ts  settings.types.ts
src/utils/: color.ts  color.util.ts  contextMenu.util.ts  copyVariants.util.ts  label.util.ts  macosPermissions.util.ts  openWith.util.ts  picker.util.ts  sanitize.util.ts  tauri.util.ts  uuid.util.ts
(+39 files in other folders)
