[package]
name = "plain-color"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "plain_color_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24.5", default-features = false, features = ["png"] }
screenshots = "0.5.2"
device_query = { version = "1.1.2", optional = true }
mouce = { version = "0.2.41", optional = true }
termcolor = "1.2.0"
tauri-plugin-clipboard-manager = "2.0.1"
base64 = "0.21.5"

[features]
default = ["device_query"]
device_query = ["dep:device_query"]
mouce = ["dep:mouce"]
