[package]
name = "PlainColor"
version = "1.0.12"
description = "Lightweight, versatile, cross-platform color picker app"
authors = ["Eugene Volynko <volynko.ua@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "plain_color_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24.9", default-features = false, features = ["png"] }
termcolor = "1.2.0"
tauri-plugin-clipboard-manager = "2.0.1"
base64 = "0.22.1"
tauri-plugin-os = "2"
tauri-plugin-process = "2.0.0"
objc = "0.2.7"
core-graphics = "0.24"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tokio = "1.42.0"
rcms = "0.1.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
